# vue-project

./: pyproject.toml
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue
frontend/src/components/: UsageChart.vue
