[project]
name = "scraper"
version = "0.0.1"
description = "A scraper"
readme = "README.md"
maintainers = [{ name = "Jacob Zheng", email = "1453366421@qq.com" }]
requires-python = ">=3.8"
dependencies = [
   "requests=2.32.3",
   "fastapi=0.115.2",
   "uvicorn=0.31.1"
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
